<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">

    <Button
        android:id="@+id/menu_services_bttn"
        style="@style/CustomButtons"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/button_style"
        android:text="@string/menu_services_bttn"
        app:layout_constraintBottom_toTopOf="@+id/menu_clients_bttn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/menu_clients_bttn"
        style="@style/CustomButtons"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/button_style"
        android:text="@string/menu_clients_bttn"
        app:layout_constraintBottom_toTopOf="@+id/menu_reports_bttn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/menu_reports_bttn"
        style="@style/CustomButtons"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="150dp"
        android:background="@drawable/button_style"
        android:text="@string/menu_reports_bttn"
        app:layout_constraintBottom_toTopOf="@+id/menu_users_bttn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/menu_users_bttn"
        style="@style/CustomButtons"
        android:layout_width="296dp"
        android:layout_height="47dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/bttn2_style"
        android:text="@string/menu_users_bttn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>