<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#fff"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/menu_services"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/add_client_bttn"
            style="@style/CustomButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_marginStart="200dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/button_style"
            android:text="@string/add_new_client_bttn" />

        <TextView
            android:id="@+id/search_clientTxt"
            style="@style/CustomText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="8dp"
            android:text="@string/search_client_txt"
            android:layout_below="@id/add_client_bttn"/>

        <EditText
            android:id="@+id/search_clientEdit"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/edit_style"
            android:drawableRight="@drawable/search"
            android:layout_below="@id/search_clientTxt"/>

        <Button
            android:id="@+id/search_bttn"
            style="@style/CustomButton"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="170dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/button_style"
            android:text="@string/search_bttn"
            android:layout_below="@id/search_clientEdit" />

        <TextView
            android:id="@+id/client_name_txt"
            style="@style/CustomText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="170dp"
            android:text="@string/client_name_txt"
            android:layout_below="@id/search_bttn"/>

        <EditText
            android:id="@+id/client_name_editTxt"
            android:layout_width="190dp"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="120dp"
            android:background="@drawable/edit_style"
            android:layout_below="@id/client_name_txt"/>

        <TextView
            android:id="@+id/client_phone_txt"
            style="@style/CustomText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="170dp"
            android:layout_marginTop="10dp"
            android:text="@string/client_phone_txt"
            android:layout_below="@id/client_name_editTxt"/>

        <EditText
            android:id="@+id/client_phone_editTxt"
            android:layout_width="190dp"
            android:layout_height="30dp"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="8dp"
            android:inputType="phone"
            android:background="@drawable/edit_style"
            android:layout_below="@id/client_phone_txt"/>

        <TextView
            android:id="@+id/client_mail_txt"
            style="@style/CustomText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="170dp"
            android:layout_marginTop="10dp"
            android:text="@string/client_mail_txt"
            android:layout_below="@id/client_phone_editTxt"/>

        <EditText
            android:id="@+id/client_mail_editTxt"
            android:layout_width="190dp"
            android:layout_height="30dp"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="8dp"
            android:inputType="textEmailAddress"
            android:background="@drawable/edit_style"
            android:layout_below="@id/client_mail_txt" />

        <TextView
            android:id="@+id/client_address_txt"
            style="@style/CustomText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="170dp"
            android:layout_marginTop="10dp"
            android:text="@string/client_address_txt"
            android:layout_below="@id/client_mail_editTxt" />

        <EditText
            android:id="@+id/client_address_editTxt"
            android:layout_width="190dp"
            android:layout_height="30dp"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_style"
            android:layout_below="@id/client_address_txt"/>

        <Button
            android:id="@+id/services_bttn"
            style="@style/CustomButton"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/bttn2_style"
            android:text="@string/client_services_bttn"
            android:layout_below="@id/client_address_editTxt"/>
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>