<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#fff"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/menu_services"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/search_serviceTxt"
            style="@style/CustomText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="130dp"
            android:layout_marginBottom="8dp"
            android:text="@string/search_service_txt" />

        <EditText
            android:id="@+id/search_clientEdit"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_style"
            android:drawableRight="@drawable/search"
            android:hint="@string/client_number_hint"
            android:layout_below="@id/search_serviceTxt"/>

        <Button
            android:id="@+id/search_serviceBttn"
            style="@style/CustomButton"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/button_style"
            android:text="@string/search_bttn"
            android:layout_below="@id/search_clientEdit"/>

        <ListView
            android:id="@+id/search_service_list"
            style="@style/CustomText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/search_serviceBttn"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>